Fix code size on mobile and add nav

--- a/app/styles/post-slug.css
+++ b/app/styles/post-slug.css
@@ -46,4 +46,6 @@
   padding: 12px;
   background-color: #efefef;
   margin: 16px 0px;
+  font-size: 11px;
+  white-space: pre-wrap;
 }
